--- a/css/styles.css
+++ b/css/styles.css
@@ -597,7 +597,7 @@ Second main section*/
   display: flex;
   margin: auto;
   border: none;
-  width: 165px;
+  min-width: 165px;
   height: 40px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -613,6 +613,10 @@ Second main section*/
 .subscribe-container {
   display: flex;
   flex-direction: column;
+  margin-top: 0;
+  margin-bottom: auto;
+  margin-left: 80px;
+  margin-right: auto;
 }
 input {
   width: 264px;
@@ -620,14 +624,15 @@ input {
   border-radius: 4px;
   border: 1px solid var(--WHITE, #fff);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  background-color: #2e2f42;
-  color: var(--WHITE, #fff);
+  background-color: transparent;
+  color: var(--White-background);
   font-family: Roboto;
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
-  line-height: 24px; /* 200% */
+  line-height: 1.5; /* 200% */
   letter-spacing: 0.48px;
+  padding-left: 16px;
 }
 .footer-form {
   display: flex;
@@ -731,7 +736,7 @@ input {
 .modal-button-send {
   display: block;
   border-radius: 4px;
-  background: var(--IRIS, #4d5ae5);
+  background: #4d5ae5;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   min-width: 169px;
   height: 56px;
@@ -766,7 +771,7 @@ input {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-textarea:focus {
-  border-color: #4d5ae5;
+  border-color: var(--Primary-Brand);
 }
 
 .footer-form {
@@ -795,14 +800,6 @@ input {
 .privacy-container {
   margin-bottom: 24px;
 }
-
-.label-modal-privacy {
-  display: block;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
-  color: var(--light-slate);
-}
 .modal-span {
   width: 16px;
   height: 16px;
@@ -818,12 +815,12 @@ input {
   margin-right: 8px;
 }
 .modal-privacy-link {
-  color: var(--iris);
+  color: var(--Primary-Brand);
 }
 .input-modal-privacy:checked + label > span {
-  background-color: var(--ocean);
+  background-color: var(--Pressed-state);
   border: none;
-  fill: var(--cloud);
+  fill: var(--Light);
 }
 .modal-label {
   font-size: 12px;
