--- a/css/styles.css
+++ b/css/styles.css
@@ -647,7 +647,6 @@ input {
   position: fixed;
   inset: 0 0 auto;
   min-height: 100vh;
-  padding: 72px 24px 24px 24px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -678,6 +677,7 @@ input {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 72px 24px 24px 24px;
 }
 .close-button {
   position: absolute;
@@ -793,6 +793,7 @@ input {
 }
 .modal-svg-input {
   position: relative;
+  color: var(--Subtle-Text);
 }
 .modal-comment-input {
   margin-bottom: 16px;
@@ -842,5 +843,8 @@ input {
 }
 .modal-input:hover,
 .modal-input:focus {
-  border-color: var(--ocean);
+  border-color: #4d5ae5;
+}
+.modal-input:focus > .modal-icon-input {
+  fill: #4d5ae5;
 }
