--- a/css/styles.css
+++ b/css/styles.css
@@ -675,7 +675,7 @@ input {
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 72px 24px 24px 24px;
-  background: #fcfcfc;
+  background-color: #fcfcfc;
 }
 .close-button {
   position: absolute;
@@ -831,6 +831,7 @@ input {
   padding-left: 38px;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #2e2f42;
 }
 .modal-input:focus {
   border-color: #4d5ae5;
