--- a/css/styles.css
+++ b/css/styles.css
@@ -709,6 +709,7 @@ input {
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
+  color: #2e2f42;
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em;
   margin-bottom: 16px;
@@ -753,7 +754,7 @@ input {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  color: var(--Text);
+  color: rgba(46, 47, 66, 0.4);
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   background-color: transparent;
